SITIONIX-62 strict query plan v2
